syntax = "proto3";

package yandex.cloud.priv.loadtesting.agent.v1;

option go_package = "github.com/ydb-platform/ydb/ydb/public/api/client/yc_private/loadtesting/agent;agent";


service AgentService {

  rpc ClaimStatus (ClaimAgentStatusRequest) returns (ClaimAgentStatusResponse);

}

message ClaimAgentStatusRequest {
  string agent_instance_id = 1;

  enum Status {
    STATUS_UNSPECIFIED = 0;
    READY_FOR_TEST = 1;
    PREPARING_TEST = 2;
    TESTING = 3;
    TANK_FAILED = 4;
    STOPPED = 5;
    UPLOADING_ARTIFACTS = 6;
  }
  Status status = 2;
}

message ClaimAgentStatusResponse {
  int64 code = 1;
}
